--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,9 @@
     <div class="wrapper">
         <div class="main-container">
             <header class="header">
-                <div class="main-title">فهرست پروژه ها</div>
+                <h1 class="main-title">فهرست پروژه ها</h1>
+                <h3 class="sub-title">با فهرست پروژه های در جریان ابر اروان بیشتر آشنا شوید</h3>
+
             </header>
             <section>sec1</section>
             <section>sec2</section>
