--- a/index.html
+++ b/index.html
@@ -19,7 +19,36 @@
                 <h1 class="main-title">فهرست پروژه ها</h1>
                 <h3 class="sub-title">با فهرست پروژه های در جریان ابر اروان بیشتر آشنا شوید</h3>
             </header>
-            <section>sec1</section>
+            <section>
+                <div class="iconic-tabs">
+                    <ul>
+                        <li>
+                            <div class="tab-item">
+                                <span class="tab-icon">
+                                    <img src="./assets/img/edit.png" alt="edit-icon">
+                                </span>
+                                <span class="tab-title">پروژه های فعال</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tab-item">
+                                <span class="tab-icon">
+                                    <img src="./assets/img/edit.png" alt="edit-icon">
+                                </span>
+                                <span class="tab-title"> در حال ارزیابی </span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tab-item">
+                                <span class="tab-icon">
+                                    <img src="./assets/img/edit.png" alt="edit-icon">
+                                </span>
+                                <span class="tab-title">پروژه های اجراشده</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
             <section>sec2</section>
             <section>sec3</section>
             <footer>footer</footer>
