added mixin to tabs

--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
                             <div class="tab-item">
                                 <span class="tab-icon">
                                     <img src="./assets/img/edit.png" alt="edit-icon">
+
                                 </span>
                                 <span class="tab-title">پروژه های فعال</span>
                             </div>
                         </li>
-                        <li>
+                        <li class="active">
                             <div class="tab-item">
                                 <span class="tab-icon">
-                                    <img src="./assets/img/edit.png" alt="edit-icon">
+
+                                    <img src="./assets/img/loader.png" alt="loader-icon">
                                 </span>
                                 <span class="tab-title"> در حال ارزیابی </span>
                             </div>
@@ -41,7 +43,8 @@
                         <li>
                             <div class="tab-item">
                                 <span class="tab-icon">
-                                    <img src="./assets/img/edit.png" alt="edit-icon">
+                                    <img src="./assets/img/checked.png" alt="checked-icon">
+
                                 </span>
                                 <span class="tab-title">پروژه های اجراشده</span>
                             </div>
