--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link href="your-project/LineIcons/LineIcons.min.css" rel="stylesheet"> -->
+    <script src="./node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
         integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/css/main.css">
@@ -19,7 +22,7 @@
                 <h1 class="main-title">فهرست پروژه ها</h1>
                 <h3 class="sub-title">با فهرست پروژه های در جریان ابر اروان بیشتر آشنا شوید</h3>
             </header>
-            <section>
+            <section id="section-1">
                 <div class="iconic-tabs">
                     <ul>
                         <li>
@@ -51,9 +54,55 @@
                         </li>
                     </ul>
                 </div>
+                <div class="content">
+                    <ul>
+                        <li>
+                            <div class="d-flex justify-space-between align-center">
+                                <div class="menu-text">WorrdPress</div>
+                                <span class="icon"><i class="fa fa-chevron-up" aria-hidden="true"></i></span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-space-between align-center">
+                                <div class="menu-text">Drupal Plugin</div>
+                                <span class="icon active"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-space-between align-center">
+                                <div class="menu-text">Migrate From CloudFlare to</div>
+                                <span class="icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-space-between align-center">
+                                <div class="menu-text">IP WhiteList</div>
+                                <span class="icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-space-between align-center">
+                                <div class="menu-text">cPanel Quick</div>
+                                <span class="icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-space-between align-center">
+                                <div class="menu-text">Dynamic DNS </div>
+                                <span class="icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-space-between align-center">
+                                <div class="menu-text">CLI To Work With</div>
+                                <span class="icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </section>
-            <section>sec2</section>
-            <section>sec3</section>
+            <section id='section-2'>sec2</section>
+            <section id='section-3'>sec3</section>
             <footer>footer</footer>
         </div>
     </div>
