--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link href="your-project/LineIcons/LineIcons.min.css" rel="stylesheet"> -->
     <script src="./node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
-
+    <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
         integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/css/main.css">
@@ -62,11 +61,75 @@
                                 <span class="icon"><i class="fa fa-chevron-up" aria-hidden="true"></i></span>
                             </div>
                         </li>
-                        <li>
+                        <li class="active">
                             <div class="d-flex justify-space-between align-center">
                                 <div class="menu-text">Drupal Plugin</div>
                                 <span class="icon active"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
                             </div>
+                            <div class='menu-details'>
+                                <div class="title-list">
+                                    <div class="title-card">
+                                        <div class="icon-wrapper">
+                                            <div class="icon-container">
+                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                            </div>
+                                        </div>
+                                        <div class="main-title">درخواست دهنده</div>
+                                        <div class="subtitle">تیم CDN</div>
+                                    </div>
+                                    <div class="title-card">
+                                        <div class="icon-wrapper">
+                                            <div class="icon-container">
+                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                            </div>
+                                        </div>
+                                        <div class="main-title">روش اجرا و ارائه </div>
+                                        <div class="subtitle">Opensource/Github</div>
+                                    </div>
+                                    <div class="title-card">
+                                        <div class="icon-wrapper">
+                                            <div class="icon-container">
+                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                            </div>
+                                        </div>
+                                        <div class="main-title">زبان پروژه </div>
+                                        <div class="subtitle">Python </div>
+                                    </div>
+                                    <div class="title-card">
+                                        <div class="icon-wrapper">
+                                            <div class="icon-container">
+                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                            </div>
+                                        </div>
+                                        <div class="main-title">مبلغ پروژه </div>
+                                        <div class="subtitle"> 10,000,000 ریال</div>
+                                    </div>
+
+                                </div>
+                                <div class="description d-flex">
+                                    <div>
+                                        <div class="icon-wrapper">
+                                            <div class="icon-container">
+                                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div>شرح پروژه</div>
+                                        <ul>
+                                            <li>نرم افزاری برای انتقال یک دامنه به همراه تنظیمات آن از روی کلودفلر به
+                                                آروان</li>
+                                            <li>یک دامنه را به همراه تنظیمات مربوطه از سرویس کلودفلر به آروان منتقل کند
+                                                API Key این نرم افزار باید بتواند با دریافت</li>
+                                            <li>حالت مطلوب میتواند یک وبسایت مستقل باشد و یا میتواند یک اسکریپتی که با
+                                                دریافت اطلاعات مربوطه این کار را انجام دهد</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="menu-link"></div>
+                            </div>
+
+
                         </li>
                         <li>
                             <div class="d-flex justify-space-between align-center">
@@ -85,6 +148,7 @@
                                 <div class="menu-text">cPanel Quick</div>
                                 <span class="icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
                             </div>
+
                         </li>
                         <li>
                             <div class="d-flex justify-space-between align-center">
