--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
                                             <button class="btn file-btn" onclick="uploadBtnHandler(event)">انتخاب فایل
                                                 pdf</button>
                                         </label>
+                                        <div class="file-info"><span>حداکثر حجم مجاز فایل 1 مگابایت باشد</span> </div>
 
                                     </div>
                                 </div>
