--- a/index.html
+++ b/index.html
@@ -300,7 +300,6 @@
 
                         </div>
                     </div>
-
                     <div class="form-section" id="form-s2">
                         <div class="form-section-title">
                             سوابق و تجربیات
@@ -332,7 +331,6 @@
                                     </div>
                                 </div>
                             </div>
-
                             <div class="w50 ">
                                 <div class="w100 form-item">
                                     <div class="w20 form-item-label">
@@ -359,9 +357,25 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="form-section" id="form-s3">
+                        <div class="form-section-title">
+                            توضیحات تکمیلی
+                        </div>
+                        <div class="form-inputs-container w100 d-flex align-center ">
+                            <div class="w50">
+                                <div class="w100 form-item">
+                                    <div class="w20 form-item-label">
+                                        <span class="form-label-text custom-title"> نوع ابریار</span>
+                                    </div>
+                                    <div class="w80 form-select-wrapper">
 
-
-
+                                        <input type="text" disabled class="form-select">
+                                        <span class="icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
             </div>
