updated select items styles

--- a/index.html
+++ b/index.html
@@ -373,6 +373,17 @@
 
                                         <input type="text" disabled class="form-select">
                                         <span class="icon"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
+                                        <div class="form-option-container">
+
+                                            <ul>
+                                                <li class="custom-title">نوع ابریار</li>
+                                                <li>ابریار کوچ ابری</li>
+                                                <li>ابریار فنی</li>
+                                                <li>ابریار بازارچه</li>
+                                                <li>ابریار آموزش</li>
+                                                <li>ابریار فروش</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
