--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                     <div class="form-section" id="form-s3">
@@ -413,8 +414,18 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="w100 form-item ">
+                                <div class="w10 form-item-label">
+                                    <span class="form-label-text custom-title"> توضیحات</span>
+                                </div>
+                                <div class="w90">
+                                    <textarea rows="6"
+                                        placeholder="در صورتی نیاز به توضیحات تکمیلی لطفا در این باکس برای ما یادداشت بگذارید"></textarea>
+                                </div>
+                            </div>
                         </div>
+
+
                     </div>
             </div>
             </form>
