added submit btn

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                                 onchange="fileUploader(event, ['resume-file-label', 'resume-label-text', 'resume-file', 'resum-warn', 'resum-info'])"
                                                 accept=".pdf" />
                                             <span id="resume-label-text"></span>
-                                            <button class="btn file-btn"
+                                            <button class=" file-btn"
                                                 onclick="uploadHandler(event,'resume-file')">انتخاب
                                                 فایل
                                                 pdf</button>
@@ -342,7 +342,7 @@
                                                 onchange="fileUploader(event,['portfolio-file-label', 'portfolio-label-text', 'portfolio-file', 'portfolio-warn', 'portfolio-info'])"
                                                 accept=".pdf" />
                                             <span id="portfolio-label-text"></span>
-                                            <button class="btn file-btn"
+                                            <button class=" file-btn"
                                                 onclick="uploadHandler(event,'portfolio-file')">انتخاب
                                                 فایل
                                                 pdf</button>
@@ -426,6 +426,9 @@
                         </div>
 
 
+                    </div>
+                    <div class="btn-container d-flex justify-end">
+                        <button class="btn ">ثبت نام </button>
                     </div>
             </div>
             </form>
