--- a/index.html
+++ b/index.html
@@ -428,14 +428,25 @@
 
                     </div>
                     <div class="btn-container d-flex justify-end">
-                        <button class="btn ">ثبت نام </button>
+                        <button class="btn">ثبت نام </button>
                     </div>
             </div>
             </form>
-
     </div>
     </section>
-    <footer>footer</footer>
+    <footer>
+        <div class="main-container">
+            <div>پروژه های موفق </div>
+            <div>
+                <ul>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     </div>
 
 
