--- a/index.html
+++ b/index.html
@@ -435,14 +435,17 @@
     </div>
     </section>
     <footer>
-        <div class="main-container">
-            <div>پروژه های موفق </div>
+        <div class="main-container d-flex  align-center flex-column">
+            <div class="main-title ">پروژه های موفق </div>
             <div>
                 <ul>
-                    <li><img src="" alt=""></li>
-                    <li><img src="" alt=""></li>
-                    <li><img src="" alt=""></li>
-                    <li><img src="" alt=""></li>
+                    <li><img src="./assets/img/footer/1.png" alt=""></li>
+                    <li><img src="./assets/img/footer/2.png" alt=""></li>
+                    <li><img src="./assets/img/footer/3.png" alt=""></li>
+                    <li><img src="./assets/img/footer/4.png" alt=""></li>
+                    <li><img src="./assets/img/footer/1.png" alt=""></li>
+                    <li><img src="./assets/img/footer/2.png" alt=""></li>
+                    <li><img src="./assets/img/footer/4.png" alt=""></li>
                 </ul>
             </div>
         </div>
